# benchmark

./: .gitignore  CMakeLists.txt  README.md
assembly/: Makefile  pointercast.cc
atomspace/: AtomSpaceBenchmark.cc  AtomSpaceBenchmark.h  CMakeLists.txt  README.md  atomspace_bm.cc  diary.txt  make_benchmark_graphs.py
atomspace/atomspace/: AtomSpaceBenchmark.cc  AtomSpaceBenchmark.h  CMakeLists.txt  README.md  atomspace_bm.cc  benchmark.cc  diary.txt  evaluationlink_bm.cc  scopelink_bm.cc
atomspace/query/: CMakeLists.txt  README.md  animals_bindlink.query.scm  benchmark.cc  bindlink_bm.cc  query_benchmark.cc  query_benchmark.conf
cogserver/: README.md  diary.md  diary.txt  shell-bench.pl
lib/: FindAtomSpace.cmake
micro/: CMakeLists.txt  README.md  addlink_bm.cc  addnode_bm.cc  atomspace_bm.cc  benchmark.h  diary.txt  evaluationlink_bm.cc  forwardchainer_bm.cc  large_flat_bm.cc  large_simple_bm.cc  large_zipf_bm.cc  pointercast_bm.cc  scopelink_bm.cc  values_bm.cc  variables_bm.cc
python/: README.md
query-link/: README.md  diary.txt  en_nano.sql  nano-dot.scm  nano-en.conf  nano-en.scm
query-loop/: README.md  bio-loop.scm  bio-loop2.scm  bio-loop3.scm  diary.txt  gene-list.scm  load-data.scm  reactome-chebi.scm  reactome-ncbi.scm  reactome-uniprot.scm  uniprot.scm
query-loop/dataset-notes/: README.md  gene-loops.gplot  gene-paths.csv  gene-paths.gplot  loop-participants.gplot  path-distribution.gplot  path-genes.csv  path-loops.csv  path-participants.csv  path-participants.gplot  path-proteins.csv
query-trite/: CMakeLists.txt  animals.atomspace.scm  animals_getlink.query.scm  query_benchmark.conf
